@@ -245,6 +245,7 @@ T_396X_pcm_mono_16bit:49b80add61d8a11514d747c9616f7e80:passed:20130624-200214:0.
 T_397mpeg_ts_broken_pes_track_detection:809a21a4d761fd0979e2118b7eb7b402:passed:20130624-220549:1.12831027
 T_398flv1_no_pixel_dimensions:44cdf14a8ffdfe91e5a0a7639b1b5834:passed:20130624-225648:0.103188723
 T_399h264_append_and_default_duration:54f0d87ba4189fcd53b951e963c5b5b5:passed:20130627-195946:5.558958754
-T_400opus_experimental:9afea2407e8784195afdc16baefc69d5:passed:20130703-213929:0.055921025
-T_401opus_experimental_remux:b4e1ac27cf3babdfe90f4027b7d2df0a:passed:20130703-213932:0.06857043
-T_402opus_output_order:042de2e3fcd70b10575a73d5bcde391c:passed:20130705-115856:0.252820697
+T_400opus_experimental:ce4f0bd0c52a9d410ce34b5751416c63:passed:20130703-213929:0.055921025
+T_401opus_experimental_remux:a910a17383083f2fa75001efd175c352:passed:20130703-213932:0.06857043
+T_402opus_output_order:e7d89f40e06bd81db8fa20b2ea6218b8:passed:20130705-115856:0.252820697
+T_403opus_remux_final:da99246c61326c47a530f95948b088be:passed:20130705-135811:0.068533558
