@@ -2,4 +2,4 @@
 
 # T_402opus_output_order
 describe "mkvmerge / Opus output order"
-test_merge "data/opus/v-opus.ogg -A data/avi/v.avi", :exit_code => :warning
+test_merge "data/opus/v-opus.ogg -A data/avi/v.avi"
