@@ -1,0 +1,4 @@
+#!/usr/bin/ruby -w
+
+describe "mkvmerge / mux Opus from MKA in final mode"
+test_merge "data/opus/v-opus.mka"
