@@ -1,3 +1,7 @@
+2013-07-05  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: new feature: Implemented final Opus muxing.
+
 2013-07-04  Moritz Bunkus  <moritz@bunkus.org>
 
         * mmg: bug fix: The "jobs" folder will be created in the same
